--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@sanketw12:registry": "https://npm.pkg.github.com"
   },
   "repository": "git://github.com/SanketW12/react-scanned-qr.git",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -20,9 +20,10 @@
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@rollup/plugin-typescript": "^8.5.0",
+    "@types/react-qr-reader": "^2.1.4",
     "@types/uuid": "^8.3.4",
     "react-qr-code": "^2.0.8",
-    "react-web-qr-reader": "^1.0.4",
+    "react-qr-reader": "2.2.1",
     "rollup": "^2.79.1",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
