--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "publishConfig": {
     "@sanketw12:registry": "https://npm.pkg.github.com"
   },
-  "repository": "git://github.com/SanketW12/react-scanned-qr.git",
-  "version": "1.2.0",
+  "repository": "https://github.com/SanketW12/react-scanned-qr.git",
+  "version": "1.2.1",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
