--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@sanketw12:registry": "https://npm.pkg.github.com"
   },
   "repository": "https://github.com/SanketW12/react-scanned-qr.git",
-  "version": "1.2.3",
-  "description": "",
+  "version": "1.2.4",
+  "description": "React qr scanner/reader and qr code generator component. Which triggers a function from both ends when scanned. ",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
